Erweiterung der Projektaufgabe
Signed-off-by: seidlech <seidlech@hs-albsig.de>

--- a/Data/Input/Config.json
+++ b/Data/Input/Config.json
@@ -1,5 +1,7 @@
 {
     "Input_Directory": "D:\\HS Albstadt\\Sommersemester 2022\\Python Applied Models\\Abschlussaufgabe\\Data\\Input",
+    "Output_Directory": "D:\\HS Albstadt\\Sommersemester 2022\\Python Applied Models\\Abschlussaufgabe\\Data\\Output",
     "Filename_Fossil_Fuel": "fossil-fuel-co2-emissions-by-nation.csv",
-    "Filename_Temperature": "TemperaturZeitreihe.json"
+    "Filename_Temperature": "TemperaturZeitreihe.json",
+    "Log_Filename": "Log.txt"
 }
