--- a/Data/Input/Config.json
+++ b/Data/Input/Config.json
@@ -1,6 +1,6 @@
 {
-    "Input_Directory": "D:\\HS Albstadt\\Sommersemester 2022\\Python Applied Models\\Abschlussaufgabe\\Data\\Input",
-    "Output_Directory": "D:\\HS Albstadt\\Sommersemester 2022\\Python Applied Models\\Abschlussaufgabe\\Data\\Output",
+    "Input_Directory": "C:\\Users\\heimb\\Documents\\GitHub\\AppliedModels\\Data\\Input",
+    "Output_Directory": "C:\\Users\\heimb\\Documents\\GitHub\\AppliedModels\\Data\\Output",
     "Filename_Fossil_Fuel": "fossil-fuel-co2-emissions-by-nation.csv",
     "Filename_Temperature": "TemperaturZeitreihe.json",
     "Temperature_Source": "GISTEMP",
@@ -23,3 +23,4 @@
             "Validation_Sample": "2000-2012"
         }
     }
+}
